# LPCNet-Thrift-Server

./: .gitignore  CMakeLists.txt  Makefile  run_server.sh
gen-py/user_profile/: TTS-remote  TTS-remote-1  TTS_LPCnet.py  __init__.py  test_client.sh  test_client_2.sh
include/: TTS.h  lpc_utils.h  lpc_wave.h  lpcnet.h  tts_profile_constants.h  tts_profile_types.h  vec.h  vec_avx.h
src/: .directory  TTS.cpp  TTS_server.skeleton.cpp  dump_data.c  lpc_utils.cpp  lpc_wave.cpp  nnet.c  train_lpcnet.py  tts_profile_constants.cpp  tts_profile_types.cpp
